feat: Mark up flip card memory game page
- except card section

- resolve #1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <script type="moudle" src="js/main.mjs"></script>
+    <script type="module" src="js/main.mjs"></script>
   </body>
 </html>
