feat: Add font theme and Modify Constant Name

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -9,11 +9,17 @@
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>지뢰찾기</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <title>Mine Sweeper</title>
   </head>
   <body>
     <div class="minesweeper-wrap">
-      <h1>지뢰찾기</h1>
+      <h1 class="minesweeper-title">Mine Sweeper</h1>
       <div class="minesweeper-board"></div>
     </div>
 
