feat: Combine each html files
1. Combine each html file into one

--- a/color-game.html
+++ b/color-game.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style_park.css" />
+    <!-- <link rel="stylesheet" href="css/popup.css" /> -->
+    <!-- <link rel="stylesheet" href="css/icon.css" /> -->
   </head>
+
   <body>
     <section class="color-game">
       <div class="inner">
@@ -24,9 +27,14 @@
           <li class="palette-item color4"></li>
         </ul>
         <button type="button" class="hint">HINT</button>
+        <ul class="hint-list">
+          <li class="hint-item"></li>
+          <li class="hint-item"></li>
+          <li class="hint-item"></li>
+        </ul>
         <footer></footer>
       </div>
     </section>
-    <script type="module" src="js/main.mjs"></script>
+    <script type="module" src="js/js_park.js"></script>
   </body>
 </html>
