--- a/color-game.html
+++ b/color-game.html
@@ -35,6 +35,6 @@
         <footer></footer>
       </div>
     </section>
-    <script type="module" src="js/js_park.js"></script>
+    <!-- <script type="module" src="js/js_park.js"></script> -->
   </body>
 </html>
