--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <h1 class="title a11y-hidden">Mini Game</h1>
       <nav class="navigation">
         <button type="button" class="restart">Restart</button>
-        <h2 class="display display-title">Mine Sweeper</h2>
-        <span class="display display-rgb a11y-hidden">rgb(184, 60, 143)</span>
+        <h2 class="display display-title a11y-hidden">Mine Sweeper</h2>
+        <span class="display display-rgb">rgb(184, 60, 143)</span>
         <div class="wrapper">
           <span class="display-round">Round: 1</span>
           <span class="display-score">Score: 0</span>
@@ -36,7 +36,7 @@
       <div class="minesweeper-board"></div>
     </section>
 
-    <section class="color-game hidden">
+    <section class="color-game">
       <ul class="color-palette">
         <li class="palette-item color1"></li>
         <li class="palette-item color2"></li>
@@ -51,14 +51,14 @@
       </ul>
     </section>
 
-    <section class="card-memory-game">
+    <section class="card-memory-game hidden">
       <!-- <h1>Level <span class="gameLevel">1</span></h1> -->
       <div class="elapsedTime">00:00:00</div>
       <section class="cardSection"></section>
     </section>
 
     <footer class="footer"></footer>
-    <!-- <script type="module" src="js/main.mjs"></script> -->
+    <script type="module" src="js/js_park.mjs"></script>
     <script src="js/cardFlip.js "></script>
     <script src="js/minesweeper.js"></script>
   </body>
