feat: Update JS minesweeper that Add Round & Score
게임이 종료되면 라운드와 점수를 갱신하는 함수를 구현함.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
     </footer>
     <!-- <script type="module" src="js/main.mjs"></script> -->
     <script src="js/cardFlip.js "></script>
-    <script src="js/minesweeper.js"></script>
+    <script type="module" src="js/minesweeper.mjs"></script>
   </body>
 </html>
