feat: Implement incompleted main page

--- a/color-game.html
+++ b/color-game.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style_park.css" />
+    <link rel="stylesheet" href="./CSS/reset.css" />
+    <link rel="stylesheet" href="./CSS/base.css" />
+    <link rel="stylesheet" href="./CSS/style_park.css" />
+
     <!-- <link rel="stylesheet" href="css/popup.css" /> -->
     <!-- <link rel="stylesheet" href="css/icon.css" /> -->
   </head>
@@ -35,6 +38,6 @@
         <footer></footer>
       </div>
     </section>
-    <!-- <script type="module" src="js/js_park.js"></script> -->
+    <script type="module" src="JS/js_park.mjs"></script>
   </body>
 </html>
