--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </nav>
     </header>
 
-    <section class="minesweeper-wrap">
+    <section class="minesweeper-wrap hidden">
       <div class="minesweeper-board"></div>
     </section>
 
@@ -75,11 +75,11 @@
       </ul>
     </section>
 
-    <section class="card-memory-game hidden">
+    <section class="card-memory-game">
       <!-- <h1>Level <span class="gameLevel">1</span></h1> -->
-      <h2>Lifes : <span class="userLife"></span></h2>
       <div class="elapsedTime">00:00:00</div>
       <section class="cardSection"></section>
+      <h2>Lifes : <span class="userLife"></span></h2>
     </section>
 
     <footer class="footer">
