--- a/minesweeper.html
+++ b/minesweeper.html
@@ -10,12 +10,12 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="CSS/base.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/minesweeper.css" />
+    <link rel="stylesheet" href="CSS/minesweeper.css" />
     <title>Mine Sweeper</title>
   </head>
   <body>
@@ -39,6 +39,6 @@
       </div>
     </div>
 
-    <script src="js/minesweeper.js"></script>
+    <script type="module" src="JS/minesweeper.mjs"></script>
   </body>
 </html>
