--- a/cardFlip.html
+++ b/cardFlip.html
@@ -5,11 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flip-Card & Memory Game</title>
-    <link rel="stylesheet" href="./CSS/cardFlip.css" />
+    <link rel="stylesheet" href="CSS/reset.css" />
+    <link rel="stylesheet" href="CSS/base.css" />
+    <link rel="stylesheet" href="CSS/cardFlip.css" />
   </head>
   <body>
-    <div class="elapsedTime">00:00:00</div>
-    <section class="cardSection"></section>
-    <script src="./JS/cardFlip.js"></script>
+    <header class="header">
+      <h1 class="title a11y-hidden">Mini Game</h1>
+      <nav class="navigation">
+        <div class="game-mode">
+          <button type="button" class="game-mode-button" data-mode="easy">
+            EASY
+          </button>
+          <button
+            type="button"
+            class="game-mode-button current-mode"
+            data-mode="nomal"
+          >
+            NOMAL
+          </button>
+          <button type="button" class="game-mode-button" data-mode="hard">
+            HARD
+          </button>
+        </div>
+        <!-- <button type="button" class="restart">Restart</button> -->
+        <h2 class="display display-title">Mine Sweeper</h2>
+        <span class="display display-rgb a11y-hidden">rgb(184, 60, 143)</span>
+        <div class="wrapper">
+          <span class="display-round">Round: 1</span>
+          <span class="display-score">Score: 0</span>
+        </div>
+      </nav>
+    </header>
+
+    <section class="card-memory-game">
+      <!-- <h1>Level <span class="gameLevel">1</span></h1> -->
+      <div class="game-status">
+        <h2>Lifes : <span class="userLife"></span></h2>
+        <div class="elapsedTime">00:00:00</div>
+      </div>
+      <section class="cardSection"></section>
+    </section>
+
+    <footer class="footer">
+      <button type="button" class="restart">Restart</button>
+    </footer>
+    <script src="JS/cardFlip.js "></script>
   </body>
 </html>
