fix: add state.mjs

--- a/cardFlip.html
+++ b/cardFlip.html
@@ -50,6 +50,6 @@
     <footer class="footer">
       <button type="button" class="restart">Restart</button>
     </footer>
-    <script src="JS/cardFlip.js "></script>
+    <script src="JS/cardFlip2.js"></script>
   </body>
 </html>
