--- a/minesweeper.html
+++ b/minesweeper.html
@@ -71,6 +71,7 @@
       </div>
     </div> -->
     <footer class="footer">
+      <a href="./main.html" class="home">HOME</a>
       <button type="button" class="restart">Restart</button>
     </footer>
     <script type="module" src="js/minesweeper.mjs"></script>
