feat: Add animation in main.html
1. Add animation main title & games using anime.js library

--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./CSS/hover.css" />
   </head>
   <body>
-    <h1>Game Snacks</h1>
+    <div class="container">
+      <h1 class="effect">Game Snacks</h1>
+    </div>
     <div class="game-list">
       <a href="./minesweeper.html">
         <div class="play-on-hover game-container">
@@ -32,6 +34,6 @@
         </div>
       </a>
     </div>
-    <script type="module" src="./JS/main.mjs"></script>
+    <script type="module" src="JS/main.mjs"></script>
   </body>
 </html>
