--- a/color-game.html
+++ b/color-game.html
@@ -39,12 +39,7 @@
     </header>
     <section class="color-game">
       <ul class="color-palette">
-        <li class="palette-item color1">
-          <!-- <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 32 32">
-          <circle class="circle" cx="16" cy="16" r="16" fill="#0c3" />
-          <path class="check" d="M9 16l5 5 9-9" fill="none" stroke="#fff" stroke-width="2.5" stroke-linecap="round">
-        </svg> -->
-        </li>
+        <li class="palette-item color1"></li>
         <li class="palette-item color2"></li>
         <li class="palette-item color3"></li>
         <li class="palette-item color4"></li>
