fix: Modify main page

--- a/cardFlip.html
+++ b/cardFlip.html
@@ -39,18 +39,17 @@
     </header>
 
     <section class="card-memory-game">
-      <!-- <h1>Level <span class="gameLevel">1</span></h1> -->
       <div class="game-status">
+        <!-- <div class="elapsedTime">00:00:00</div> -->
         <h2>Lifes : <span class="userLife"></span></h2>
-        <div class="elapsedTime">00:00:00</div>
       </div>
       <section class="cardSection"></section>
     </section>
 
     <footer class="footer">
-      <button type="button" class="home">HOME</button>
+      <a href="./main.html" class="home">HOME</a>
       <button type="button" class="restart">Restart</button>
     </footer>
-    <script src="JS/cardFlip2.js"></script>
+    <script type="module" src="JS/cardFlip.mjs"></script>
   </body>
 </html>
