--- a/index.html
+++ b/index.html
@@ -1,93 +1,45 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/style_park.css" />
-    <link rel="stylesheet" href="css/cardFlip.css" />
-    <link rel="stylesheet" href="css/minesweeper.css" />
-    <title>Document</title>
+    <title>Game Snacks</title>
+    <link rel="stylesheet" href="./CSS/reset.css" />
+    <link rel="stylesheet" href="./CSS/main.css" />
   </head>
-
   <body>
-    <header class="header">
-      <h1 class="title a11y-hidden">Mini Game</h1>
-      <nav class="navigation">
-        <div class="game-mode">
-          <button type="button" class="game-mode-button" data-mode="easy">
-            EASY
-          </button>
-          <button
-            type="button"
-            class="game-mode-button current-mode"
-            data-mode="nomal"
-          >
-            NOMAL
-          </button>
-          <button type="button" class="game-mode-button" data-mode="hard">
-            HARD
-          </button>
+    <div class="container">
+      <h1 class="effect">Game Snacks</h1>
+    </div>
+    <div class="game-list">
+      <a href="./minesweeper.html">
+        <div class="play-on-hover game-container">
+          <div class="game-gif mine"></div>
+          <div class="game-back">
+            <h2 class="game-name">Mine Sweeper</h2>
+          </div>
         </div>
-        <!-- <button type="button" class="restart">Restart</button> -->
-        <h2 class="display display-title">
-          <i class="fas fa-bomb"></i> Mine Sweeper <i class="fas fa-bomb"></i>
-        </h2>
-        <span class="display display-rgb a11y-hidden">rgb(184, 60, 143)</span>
-        <div class="wrapper">
-          <span class="display-round">Round: 1</span>
-          <span class="display-score">Score: 0</span>
+      </a>
+
+      <a href="./color-game.html">
+        <div class="play-on-hover game-container">
+          <div class="game-gif color"></div>
+          <div class="game-back">
+            <h2 class="game-name">RGB Guessing</h2>
+          </div>
         </div>
-      </nav>
-    </header>
+      </a>
 
-    <section class="minesweeper-wrap hidden">
-      <div class="minesweeper-board"></div>
-    </section>
-
-    <section class="color-game hidden">
-      <ul class="color-palette">
-        <li class="palette-item color1"></li>
-        <li class="palette-item color2"></li>
-        <li class="palette-item color3"></li>
-        <li class="palette-item color4"></li>
-      </ul>
-      <button type="button" class="hint">HINT</button>
-      <ul class="hint-list">
-        <li class="hint-item"></li>
-        <li class="hint-item"></li>
-        <li class="hint-item"></li>
-      </ul>
-    </section>
-
-    <section class="card-memory-game">
-      <!-- <h1>Level <span class="gameLevel">1</span></h1> -->
-      <div class="elapsedTime">00:00:00</div>
-      <section class="cardSection"></section>
-      <h2>Lifes : <span class="userLife"></span></h2>
-    </section>
-
-    <footer class="footer">
-      <button type="button" class="home">HOME</button>
-      <button type="button" class="restart">Restart</button>
-    </footer>
-    <script type="module" src="js/js_park.mjs"></script>
-    <script src="js/cardFlip.js "></script>
-    <script type="module" src="js/minesweeper.mjs"></script>
+      <a href="./cardFlip.html">
+        <div class="play-on-hover game-container">
+          <div class="game-gif card"></div>
+          <div class="game-back">
+            <h2 class="game-name">Card Memory</h2>
+          </div>
+        </div>
+      </a>
+    </div>
+    <script type="module" src="JS/main.mjs"></script>
   </body>
 </html>
