fix: main.html layout collpase
1. fix layout collpase
2. apply media-query animation to each viewport

--- a/color-game.html
+++ b/color-game.html
@@ -46,9 +46,8 @@
       </ul>
       <button type="button" class="hint">HINT</button>
       <ul class="hint-list"></ul>
-    </section>
     <footer class="footer">
-      <button type="button" class="home">HOME</button>
+      <a href="/" class="home">HOME</a>
       <button type="button" class="restart">Restart</button>
     </footer>
     <script type="module" src="js/js_park.mjs"></script>
