design: Update index.html Style And base.css for header and footer
메인 페이지 스타일링을 추가하고, 게임 페이지의 헤더와 푸터를 반응형으로 설정함.

--- a/cardFlip.html
+++ b/cardFlip.html
@@ -47,7 +47,7 @@
     </section>
 
     <footer class="footer">
-      <a href="./main.html" class="home">HOME</a>
+      <a href="./index.html" class="home">HOME</a>
       <button type="button" class="restart">Restart</button>
     </footer>
     <script type="module" src="JS/cardFlip.mjs"></script>
