--- a/minesweeper.html
+++ b/minesweeper.html
@@ -34,9 +34,9 @@
           <button
             type="button"
             class="game-mode-button current-mode"
-            data-mode="nomal"
+            data-mode="normal"
           >
-            NOMAL
+            NORMAL
           </button>
           <button type="button" class="game-mode-button" data-mode="hard">
             HARD
