design: change color guess GIF file

--- a/cardFlip.html
+++ b/cardFlip.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="CSS/reset.css" />
     <link rel="stylesheet" href="CSS/base.css" />
     <link rel="stylesheet" href="CSS/cardFlip.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -28,9 +39,10 @@
             HARD
           </button>
         </div>
-        <!-- <button type="button" class="restart">Restart</button> -->
-        <h2 class="display display-title">Flip-Card & Memory</h2>
-        <span class="display display-rgb a11y-hidden">rgb(184, 60, 143)</span>
+        <h2 class="display display-title">
+          <i class="fas fa-gamepad"></i> Flip-Card & Memory
+          <i class="fas fa-gamepad"></i>
+        </h2>
         <div class="wrapper">
           <span class="display-round">Round: 1</span>
           <span class="display-score">Score: 0</span>
