fix: anime.js not working

--- a/color_game.html
+++ b/color_game.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/style_park.css" />
-    <link
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600&display=swap"
-    rel="stylesheet"
-  />
-    <title>Document</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <link rel="stylesheet" href="css/color_game.css" />
+    <title>RGB GUESSING GAME</title>
   </head>
 
   <body>
@@ -50,10 +49,12 @@
       </ul>
       <button type="button" class="hint">HINT</button>
       <ul class="hint-list"></ul>
+    </section>
     <footer class="footer">
       <a href="/" class="home">HOME</a>
       <button type="button" class="restart">Restart</button>
     </footer>
-    <script type="module" src="js/js_park.mjs"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script type="module" src="js/color_game.mjs"></script>
   </body>
 </html>
