--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </a>
 
-      <a href="./color-game.html">
+      <a href="./color_game.html">
         <div class="play-on-hover game-container">
           <div class="game-gif color"></div>
           <div class="game-back">
@@ -44,6 +44,6 @@
         </div>
       </a>
     </div>
-    <script type="module" src="JS/main.mjs"></script>
+    <script type="module" src="js/main.mjs"></script>
   </body>
 </html>
