fix: Activate anime library on index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
       </a>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script type="module" src="js/main.mjs"></script>
   </body>
 </html>
