Rename: Modify absolute path to relative path

--- a/cardFlip.html
+++ b/cardFlip.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flip-Card & Memory Game</title>
-    <link rel="stylesheet" href="CSS/reset.css" />
-    <link rel="stylesheet" href="CSS/base.css" />
-    <link rel="stylesheet" href="CSS/cardFlip.css" />
+    <link rel="stylesheet" href="./CSS/reset.css" />
+    <link rel="stylesheet" href="./CSS/base.css" />
+    <link rel="stylesheet" href="./CSS/cardFlip.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -61,6 +61,6 @@
       <a href="./index.html" class="home">HOME</a>
       <button type="button" class="restart">Restart</button>
     </footer>
-    <script type="module" src="JS/cardFlip.mjs"></script>
+    <script type="module" src="./JS/cardFlip.mjs"></script>
   </body>
 </html>
