--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
       </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
-    <script type="module" src="js/main.mjs"></script>
+    <script type="module" src="./js/main.mjs"></script>
   </body>
 </html>
