--- a/minesweeper.html
+++ b/minesweeper.html
@@ -13,14 +13,14 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="CSS/base.css" />
+    <link rel="stylesheet" href="./CSS/base.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/minesweeper.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/minesweeper.css" />
     <title>Mine Sweeper</title>
   </head>
   <body>
@@ -60,6 +60,6 @@
       <a href="/" class="home">HOME</a>
       <button type="button" class="restart">Restart</button>
     </footer>
-    <script type="module" src="js/minesweeper.mjs"></script>
+    <script type="module" src="./js/minesweeper.mjs"></script>
   </body>
 </html>
